# rag-assistant

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: settings.yaml  sources.yaml
data/: eval_questions.json
docs/: architecture.md  sample_queries.md
src/: logging_config.py
src/rag/: api.py  chain.py  cli.py  evaluate.py  evaluation.py  ingest.py  loaders.py  query_processing.py  utils.py  vectorstore.py
tests/: test_ingest.py
