[project]
name = "rag-assistant"
version = "1.0.0"
description = "A Modular Retrieval-Augmented Generation Framework with LangChain and Chroma/FAISS"
authors = [{name="Mohan Elango"}]
license = "MIT"
keywords = [
  "rag", "retrieval-augmented-generation", "langchain", "chroma", "faiss",
  "query-processing", "evaluation", "llm", "openai", "ollama"
]
